[package]
name = "cerberus"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hmac = { version = "0.12.1", default-features = false }
sha1 = { version = "0.10.5", default-features = false }

[features]

[dev-dependencies]
paste = "1.0.12"
rand = { version = "0.8.5", features = ["min_const_gen"] }
